objects/Account.object
<CustomObject>
    <fields>
        <fullName>InstitutionSubType__c</fullName>
        <description>SFDC-2313 Multi select values are dependent on the Institution Type field</description>
        <inlineHelpText>Multi select values dependent on Institution Type field</inlineHelpText>
        <label>Institution Sub Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>InstitutionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airlines</fullName>
                </value>
                <value>
                    <fullName>Airports</fullName>
                </value>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Auto Finance</fullName>
                </value>
                <value>
                    <fullName>Auto Manufacturers</fullName>
                </value>
                <value>
                    <fullName>Automotive - Other</fullName>
                </value>
                <value>
                    <fullName>Auto Parts Suppliers Other</fullName>
                </value>
                <value>
                    <fullName>Auto Parts Suppliers Tier 1</fullName>
                </value>
                <value>
                    <fullName>Auto Retailers</fullName>
                </value>
                <value>
                    <fullName>Auto Services</fullName>
                </value>
                <value>
                    <fullName>Business/Management</fullName>
                </value>
                <value>
                    <fullName>Chemicals - Other</fullName>
                </value>
                <value>
                    <fullName>CLO</fullName>
                    <label>CLO Manager</label>
                </value>
                <value>
                    <fullName>Coal and Commodity Traders</fullName>
                </value>
                <value>
                    <fullName>Coal Mining - Coking/Met Coal Producers</fullName>
                </value>
                <value>
                    <fullName>Coal Mining - Thermal/Steam Coal Producers</fullName>
                </value>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Crop Protection and Seed</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Diversified</fullName>
                </value>
                <value>
                    <fullName>Downstream - Other</fullName>
                </value>
                <value>
                    <fullName>Drilling</fullName>
                    <label>Drilling and Completions</label>
                </value>
                <value>
                    <fullName>Electric - Coops</fullName>
                </value>
                <value>
                    <fullName>Electric - Munis</fullName>
                </value>
                <value>
                    <fullName>Electric - Transportation/Distribution and Regulated Retail</fullName>
                </value>
                <value>
                    <fullName>Electric - Transportation/Distribution and Unregulated Retail</fullName>
                </value>
                <value>
                    <fullName>Energy Traders</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>ETFs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstitutionType__c</fullName>
        <description>SFDC1-1162 related to External Org Type. Will be maintained by SF Ops team.</description>
        <inlineHelpText>Please select Institution Type.</inlineHelpText>
        <label>Institution Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ExternalOrgType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                    <label>Accounting and Tax</label>
                </value>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture and Food - Other</fullName>
                </value>
                <value>
                    <fullName>Airlines/Airports</fullName>
                </value>
                <value>
                    <fullName>Asset Management - Holding Company</fullName>
                    <label>Alternative Asset Management</label>
                </value>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Bank - Central</fullName>
                </value>
                <value>
                    <fullName>Bank - Development</fullName>
                </value>
                <value>
                    <fullName>Biomass</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Carbon Agency</fullName>
                </value>
                <value>
                    <fullName>Carbon Retailer</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Communications Other</fullName>
                </value>
                <value>
                    <fullName>Construction - Other</fullName>
                </value>
                <value>
                    <fullName>Consulting and Advisory</fullName>
                    <label>Consulting</label>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer - Other</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Containers and Packaging</fullName>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>Direct Lender</fullName>
                </value>
                <value>
                    <fullName>Diversified Mining and Metals</fullName>
                </value>
                <value>
                    <fullName>Downstream</fullName>
                </value>
                <value>
                    <fullName>Electrical Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KingdomExpirationDate__c</fullName>
        <description>SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Kingdom Customer Care</inlineHelpText>
        <label>Kingdom Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: related to Legacy ID and Legacy system, this field is a concatenation of those two fields to create a unique legacy UD that can be used as an external key for updates by the migration team, will not be visible to sales profiles to avoid confusion with related legacy ids object.
This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 When the account is created via migration this field will be populated by the migration with the winning ID of the legacy system.  Please note that all 3 legacy fields listed here are from the highest ranking source. Each source can be found in the related table Legacy Account ID - will not be visible to Sales profiles to avoid confusion with related legacy ids object.</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFM-199: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: related to Legacy ID, this field identifies the legacy system from which the legacy ID is from, will not be visible to Sales profiles to avoid confusion with related legacy ids object</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NotInDataDotCom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-144 Flags accounts created manually without data.com validation. SFDC1-8977: Renaming help text</description>
        <inlineHelpText>Only editable by Customer Master Data Team.</inlineHelpText>
        <label>Not in Data.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OFACSanctioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(SFDC-5716) Integrate Actimize with Salesforce</description>
        <label>OFAC - Sanctioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenOpportunityCount__c</fullName>
        <description>SFDC-3267: for Cloudingo tool. Displays open opportunity count</description>
        <label>Open Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>6W-Closed Won, 6W-Renewal Won, 6W-Forecasting Placeholder, 6L-Closed Lost, 6L-Renewal Lost, 6L-Forecasting Placeholder, 6WP-Closed Won/Order Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpportunityCount__c</fullName>
        <description>SFDC-3267: for Cloudingo tool. Displays the opportunity count</description>
        <label>Opportunity Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PKIDAccount__c</fullName>
        <description>SFDC1-2445 Every Object contains a PKID.  This is a system generated number in the format Act000000.  It is used as an external ID for identifying records across environments when an update is needed</description>
        <displayFormat>Act{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Generated by Salesforce</inlineHelpText>
        <label>PKID Account</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ParentAccountPKID__c</fullName>
        <description>SFDC-1126 Parent Account PKID</description>
        <formula>Parent.PKIDAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Parent Account PKID</inlineHelpText>
        <label>Parent Account  PKID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCompanyDUNS__c</fullName>
        <description>SFM-194: Added as part of Accounts DAT
SFDC-5081 replacing the formula: DandbCompany.ParentOrHqDunsNumber</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated via data.com</inlineHelpText>
        <label>Parent Company DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCompanyName1__c</fullName>
        <description>SFM-194: Added as part of Accounts DAT
SFDC-5081 replacing the formula to decommission: DandbCompany.ParentOrHqBusinessName</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated via data.com</inlineHelpText>
        <label>Parent Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerType__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Type of Alliance Partner</inlineHelpText>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Exchange / Clearer / Trading Venue (ECTV)</fullName>
                </value>
                <value>
                    <fullName>Information Service Provider (ISP)</fullName>
                </value>
                <value>
                    <fullName>Technology / Solution Provider (TSP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PetraExpirationDate__c</fullName>
        <description>SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Petra Customer Care</inlineHelpText>
        <label>Petra Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreviousOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-470 This is a hidden field to store the Account&apos;s previous owner</description>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PreviousAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>SFDC1-493; to set the Priority of the Account</description>
        <inlineHelpText>P1: with 3+ billable contracts, RRR &gt; $500K; P2: with 2+ billable contracts, RRR &gt; $250K; P3: billable accounts that do not meet P2 criteria; P4: non-billable accounts; PP: Priority Prospect; PD: Priority Development; SA: Strategic Account</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1</fullName>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                </value>
                <value>
                    <fullName>Priority 3</fullName>
                </value>
                <value>
                    <fullName>Priority 4</fullName>
                </value>
                <value>
                    <fullName>Priority Prospect</fullName>
                    <default>true</default>
                    <label>Priority Prospect</label>
                </value>
                <value>
                    <fullName>Priority Development</fullName>
                </value>
                <value>
                    <fullName>Strategic Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3289: Account checkbox field to indicate referral</description>
        <inlineHelpText>Please use this field to indicate whether the account can be used to tag as a referral on opportunities.</inlineHelpText>
        <label>Referral Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <defaultValue>&quot;Prospect&quot;</defaultValue>
        <description>SFDC1-775 Read Only Calculated field on account.
SFDC-3210 logic updated</description>
        <inlineHelpText>Specifies the current relationship between Account and IHS Markit. It is computed based on related Contracts and Opportunities</inlineHelpText>
        <label>Relationship</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Annual_Revenue__c</fullName>
        <label>UNUSED_S&amp;P Capital IQ Annual Revenue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQCompanyID__c</fullName>
        <description>The field must be added to the layout in Professional Edition.</description>
        <label>UNUSED_PE_S&amp;P Capital IQ Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQCompanyId_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQCompanyID__c!=0, TEXT(SNPCAPIQ__CapitalIQCompanyID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S&amp;P Capital IQ Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQRevenueUSD__c</fullName>
        <label>S&amp;P Capital IQ Revenue (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Company_Type__c</fullName>
        <label>S&amp;P Capital IQ Company Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Industry__c</fullName>
        <label>S&amp;P Capital IQ Primary Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Is_DB_USA_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include expanded business listings</description>
        <inlineHelpText>Include expanded business listings</inlineHelpText>
        <label>Include expanded business listings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__LastUpdatedDate__c</fullName>
        <label>S&amp;P Capital IQ Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__PE_SP_Capital_IQ_Company_ID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQCompanyID__c!=0, TEXT(SNPCAPIQ__CapitalIQCompanyID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PE_S&amp;P Capital IQ Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Primary_Exchange__c</fullName>
        <label>S&amp;P Capital IQ Primary Exchange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__SNPMI_MICompanyID__c</fullName>
        <description>Created as part of user story # 3090543 - [MI APP] Update the APEX code to include the new fields on accounts and leads</description>
        <label>S&amp;P MI Company Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__SNPMI_MIUltimate_Parent_Company_Key__c</fullName>
        <description>Created as part of user story # 3090543 - [MI APP] Update the APEX code to include the new fields on accounts and leads</description>
        <label>S&amp;P MI Ultimate Parent Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__S_P_Capital_IQ_Description__c</fullName>
        <label>S&amp;P Capital IQ Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Ultimate_Parent_Company_ID__c</fullName>
        <description>The field must be added to the layout in Professional Edition.</description>
        <label>S&amp;P Capital IQ Ultimate Parent CompanyID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Ultimate_Parent_Company__c</fullName>
        <label>S&amp;P Capital IQ Ultimate Parent Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__Year_Founded__c</fullName>
        <label>S&amp;P Capital IQ Year Founded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__cap_id_id_txt__c</fullName>
        <formula>TEXT(SNPCAPIQ__CapitalIQCompanyID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UNUSED_CapIQ Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCAPIQID__c</fullName>
        <description>SFDC-4057 To help Customer Master Data team to store the S&amp;P CAPIQ IDs for accounts, to prepare for the data.com replacement.</description>
        <externalId>true</externalId>
        <inlineHelpText>To help Customer Master Data team to store the S&amp;P CAPIQ IDs for accounts, to prepare for the data.com replacement</inlineHelpText>
        <label>S&amp;P CAPIQ ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_CIQ_Company_ID__c</fullName>
        <description>US 3507310: Unique ID used to sync account with divisional orgs MI, Platts, Ratings, and Indices.</description>
        <externalId>true</externalId>
        <label>SP CIQ Company ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesNotes__c</fullName>
        <description>SFDC1-1407 Long Text field for Sales notes on Account. This was a legacy Markit field</description>
        <inlineHelpText>Any additional information regarding the account like specific instructions, special requests, unique details</inlineHelpText>
        <label>Sales Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SanctionPaymentTerms__c</fullName>
        <description>(SFDC-5716) Integrate Actimize with Salesforce</description>
        <label>Sanction Payment Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PDVSA - 90 Days</fullName>
                </value>
                <value>
                    <fullName>SSI Directive 1 - 14 Days</fullName>
                </value>
                <value>
                    <fullName>SSI Directive 2 - 60 Days</fullName>
                </value>
                <value>
                    <fullName>SSI Directive 3 - 30 Days</fullName>
                </value>
                <value>
                    <fullName>SSI Directive 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SanctionedPrograms__c</fullName>
        <description>(SFDC-5716) Integrate Actimize with Salesforce</description>
        <label>Sanctioned Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FinCen</fullName>
                </value>
                <value>
                    <fullName>High Risk Country</fullName>
                </value>
                <value>
                    <fullName>Iran Sanctions Program</fullName>
                </value>
                <value>
                    <fullName>OFAC NPWMD</fullName>
                </value>
                <value>
                    <fullName>OFAC SDGT</fullName>
                </value>
                <value>
                    <fullName>OFAC SDN</fullName>
                </value>
                <value>
                    <fullName>OFAC SSI</fullName>
                </value>
                <value>
                    <fullName>Other Sanctions</fullName>
                </value>
                <value>
                    <fullName>FinCen ( if applicable)</fullName>
                    <isActive>false</isActive>
                    <label>FinCen ( if applicable)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SanctionedProhibited__c</fullName>
        <description>SFDC1-7199 Sanctioned/Prohibited status of country in &apos;Incorporated In&apos; field</description>
        <formula>TEXT(IncorporatedIn__r.LegalStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sanctioned/Prohibited status of country</inlineHelpText>
        <label>Sanctioned/Prohibited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-965 and SFDC1-638 Lookup to Case object. This field will be systematically filled when the Account is created from a Case request to the Data Governance team.</description>
        <inlineHelpText>Case from which account was created</inlineHelpText>
        <label>Source Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateOfIncorporation__c</fullName>
        <description>SFDC1-4360 Account&apos;s State of Incorporation</description>
        <inlineHelpText>This value can be captured for legal reasons, it is mandatory if the Country of Incorporation is United States.</inlineHelpText>
        <label>State of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UnitedStatesPicklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>SFDC1-9133 : This field is being used to capture the State value from Case while creating the Accout using the Quick Action &apos;Create New Account&apos;</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-144 Determines if the Account is Active or inactive.</description>
        <inlineHelpText>Please select account status.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>InactiveOutOfBusiness</fullName>
                    <label>Inactive - Out of Business</label>
                </value>
                <value>
                    <fullName>InactiveInvalid</fullName>
                    <label>Inactive - Invalid</label>
                </value>
                <value>
                    <fullName>InactiveLifecycle</fullName>
                    <label>Inactive - Lifecycle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThreeDigitNAICSCodeDescription__c</fullName>
        <description>SFDC1-7199 3-Digit NAICS Code Description</description>
        <inlineHelpText>Maintained by the Customer Master Data Team and populated through the integration with Customer Master data</inlineHelpText>
        <label>3-Digit NAICS Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreeDigitNAICSCode__c</fullName>
        <description>SFDC1-7199 3-Digit NAICS Code</description>
        <inlineHelpText>Maintained by the Account Governance team and populated through the integration with Customer Master data</inlineHelpText>
        <label>3-Digit NAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAnnualContractValueUSD__c</fullName>
        <description>SFDC-3450: To store USD equivalent of Total Annual Contract Value amount field on account.</description>
        <formula>TotalAnnualContractValue__c/CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Annual Contract Value(USD)&quot; = Sum(in USD) of the &quot;Total Annual Contract Value&quot; on the Account</inlineHelpText>
        <label>Total Annual Contract Value(USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAnnualContractValue__c</fullName>
        <description>SFDC1-5228 Account Overview Report, Displays the Total Annual Contract value for the account.</description>
        <inlineHelpText>Displays the Total Annual Contract value for the account.</inlineHelpText>
        <label>Total Annual Contract Value</label>
        <summarizedField>ApprovedContractSummary__c.AnnualContractValue__c</summarizedField>
        <summaryForeignKey>ApprovedContractSummary__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TrainingNPS__c</fullName>
        <description>SFDC-5347: This field calculates the average Net Promoter Score (NPS) across all the Training Survey Responses under this Account.</description>
        <label>Training – NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainingTrainingMetNeeds__c</fullName>
        <inlineHelpText>This roll-up field calculates the average score of whether the training expectations were met across ALL Training Survey Responses for any Contact(s) who submitted a Survey Response under this Account, on a scale of 1 (Strongly disagree) - 7 (Strongly agree).</inlineHelpText>
        <label>Training – Training Met Needs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionalNPS__c</fullName>
        <description>SFDC-5347: This field calculates the average Net Promoter Score (NPS) across all the transactional Survey Responses under this Account.</description>
        <label>Transactional – NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UltimateParentID__c</fullName>
        <description>SFDC1-10940: Ultimate parent account Id, done upto 4 levels</description>
        <formula>IF (
	ISBLANK( ParentId ) , 
	Id, 
	IF (
		ISBLANK ( Parent.ParentId ), 
		ParentId , 
		IF (
			ISBLANK ( Parent.Parent.ParentId ), 
			Parent.ParentId , 
			IF (
				ISBLANK ( Parent.Parent.Parent.ParentId ), 
				Parent.Parent.ParentId , 
				Parent.Parent.Parent.ParentId 
			) 
		) 
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ultimate Parent AccountId</inlineHelpText>
        <label>Ultimate Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UltimateParentPKID__c</fullName>
        <description>SFDC-1126: Ultimate Parent Account PKID, done upto 4 levels</description>
        <formula>IF (
	ISBLANK( PKIDAccount__c   ) , 
	Id, 
	IF (
		ISBLANK ( Parent.PKIDAccount__c   ), 
		PKIDAccount__c   , 
		IF (
			ISBLANK ( Parent.Parent.PKIDAccount__c   ), 
			Parent.PKIDAccount__c   , 
			IF (
				ISBLANK ( Parent.Parent.Parent.PKIDAccount__c   ), 
				Parent.Parent.PKIDAccount__c   , 
				Parent.Parent.Parent.PKIDAccount__c   
			) 
		) 
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ultimate Parent Account PKID</inlineHelpText>
        <label>Ultimate Parent PKID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UltimateParent__c</fullName>
        <description>SFM-194: Added as part of account DAT.</description>
        <formula>IF (ISBLANK( ParentId ) , 
Name, 
IF (ISBLANK ( Parent.ParentId ), 
Parent.Name , 
IF (ISBLANK ( Parent.Parent.ParentId ), 
Parent.Parent.Name , 
IF (ISBLANK ( Parent.Parent.Parent.ParentId ), 
Parent.Parent.Parent.Name , 
Parent.Parent.Parent.Parent.Name 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the ultimate parent for this account, up to four levels.</inlineHelpText>
        <label>Ultimate Parent</label>
        <type>Text</type>
    </fields>
</CustomObject>